spacing-fixes

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,14 @@
-*margin {
+*{margin:0;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
 body {
-
+height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 100vh;
   background-color: rgb(7, 7, 37);
 }
 
@@ -21,7 +20,7 @@ body {
   display: flex;
   flex-direction: column;
   height: fit-content;
-  width: 15.625rem;
+  max-width: 15.625rem;
 }
 
 .content {
@@ -90,3 +89,5 @@ body {
 
   background-color: rgb(109, 104, 104);
 }
+
+.decription{margin-bottom: 0.5rem;}
